# GenshiCraft-llplugin

./: .gitignore  CMakeLists.txt  Doxyfile  project.sln
.github/workflows/: build-template.yml
src/: Character.cc  Character.h  Command.cc  Command.h  Core.hpp  Damage.cc  Damage.h  Menu.cc  Menu.h  PlayerEx.cc  PlayerEx.h  Plugin.cc  Plugin.h  Resource.rc  Sidebar.cc  Sidebar.h  Version.h  Weapon.cc  Weapon.h  actorex.cc  actorex.h  artifact.cc  artifact.h  aux_data.cc  aux_data.h  character.cc  character.h  command.cc  damage.cc  damage.h  dllmain.cc  dllmain.cpp  exceptions.h  food.cc  food.h  menu.cc  mobex.cc  mobex.h  modifier.cc  modifier.h  (+12 more)
src/characters/: KukiShinobu.cc  KukiShinobu.h  kuki_shinobu.cc  kuki_shinobu.h
src/weapons/: DullBlade.cc  DullBlade.h  dull_blade.cc  dull_blade.h  silver_sword.cc  silver_sword.h
